dark mode fixes

--- a/src/scss/theme/dark/block.scss
+++ b/src/scss/theme/dark/block.scss
@@ -209,6 +209,16 @@
 			}
         }
 
+		.viewContent.viewCalendar {
+			.dateSelect { background-color: rgba(23,23,23,0.9); }
+			.table, .day { border-color: $colorShapeSecondary; }
+			.table {
+				.head {
+					.item { border-color: $colorShapeSecondary; }
+				}
+			}
+		}
+
 		.content {
 			.scrollWrap { background: $colorBgPrimary; }
 		}
